# Spectra

./: .gitignore  .gitmodules  README.md  diff.txt  refactor.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Material.h  Plane.cpp  Plane.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Spectra.cpp  Spectra.h  Sphere.cpp  Sphere.h  World.h  imgui.ini  main.cpp
src/glm/gtx/: easing.inl:Zone.Identifier
